--- a/.env
+++ b/.env
@@ -40,5 +40,5 @@ DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&ch
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://contact%40agriela.com:Contactagriela1%40@smtp.hostinger.com:465
+MAILER_DSN=smtp://contact%40agri-ela.com:Contactagriela1%40@smtp.hostinger.com:465
 ###< symfony/mailer ###
